--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:      /:year-:month-:day/:title
 title:          Anmol Vijayvargiya
 paginate:       5
 baseurl:        ""
-url:            "http://anmolvj.com"
+url:            "http://blog.anmolvj.com"
 
 # Assets
 sass:
